# doombot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  lock.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-dev.yml  deploy-prod.yml  lint.yml  main.yml  tests.yml
cogs/: maps.py  personal.py  quotes.py  records.py  tags_old.py  tasks.py  test.py  user_setup.py
cogs/tags/: __init__.py  tags.py  tags_paginator.py
cogs/tournament/: missions.py  submissions.py
cogs/tournament/utils/: data.py
configs/: dev.toml  prod.toml
core/: __init__.py  _types.py  bot.py
database/: __init__.py  config.py
database/migrations/: 0001_baseline.sql
database/services/: __init__.py  _base.py  duels.py  gym.py  maps.py  misc.py  records.py  tags.py  tournament.py  users.py  xp.py
docs/superpowers/plans/: 2026-07-05-baseline-migration.md  2026-07-05-map-submission-guide-field.md
docs/superpowers/specs/: 2026-07-05-baseline-migration-design.md  2026-07-05-map-submission-guide-field-design.md
extensions/: __init__.py  _base.py  events.py  fun.py  housekeeping.py  mod.py  quotes.py  roles.py  settings.py
extensions/duels/: __init__.py  cog.py  models.py  scheduler.py  views.py
extensions/gym/: __init__.py  calc.py  cog.py  views.py
extensions/maps/: __init__.py  cog.py  views.py
extensions/maps/views/: map_edits.py
extensions/records/: __init__.py  cog.py  views.py
extensions/tags/: __init__.py  cog.py  naming.py  views.py
extensions/tournament/: __init__.py  cog.py  models.py  scheduler.py  spreadsheet.py  views.py  xp.py
extensions/xp/: __init__.py  card.py  cog.py
postgres/: docker-compose.yml
tests/: test_duels.py  test_flags.py  test_fun_text.py  test_gym_calc.py  test_map_views.py  test_tag_naming.py  test_tournament_models.py  test_tournament_spreadsheet.py  test_tournament_xp.py  test_transformers.py  test_xp_card.py
utilities/: __init__.py  checks.py  config.py  emojis.py  errors.py  flags.py  formatting.py  transformers.py  views.py
utils/: embeds.py  errors.py  flags.py  records.py  utils.py
views/: maps.py  paginator.py
