[project]
name = "akande-ogundimu"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "asyncpg>=0.31.0",
    "dateparser>=1.4.1",
    "discord-py",
    "jishaku>=2.7.5",
    "librt>=0.12.0",
    "loguru>=0.7.3",
    "msgspec>=0.21.1",
    "pillow>=12.3.0",
    "sqlspec>=0.52.0",
    "xlsxwriter>=3.2.9",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/rapptz/discord.py" }

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pylintsql>=0.0.9",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.basedpyright]
typeCheckingMode = "basic"
# Setting exclude replaces the defaults, so restate them (.venv is covered by "**/.*")
exclude = ["**/__pycache__", "**/.*", "backups", "tests"]

[tool.ruff]
extend-exclude = ["tests"]
force-exclude = true

[tool.sqlspec]
config = "database.config.config"


[tool.sqlfluff.core]
dialect = "postgres"
templater = "placeholder"
max_line_length = 88
exclude_rules = ["RF01", "RF02", "RF04", "ST06", "AM09"]

[tool.sqlfluff.templater.placeholder]
param_style = "colon"
# ":end" would otherwise render as the reserved keyword "end" and break parsing
end = "NOW()"
# ":limit" would otherwise render as "LIMIT limit" and break parsing
limit = "1"
# ":primary" would otherwise render as the reserved keyword "primary" and break parsing
primary = "TRUE"

[tool.sqlfluff.indentation]
tab_space_size = 2
indented_joins = false
indented_ctes = false

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"

[tool.pylintsql]
exclude = [
    ".venv/**",
    "build/**",
    "dist/**",
    "tests/**"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
